objects/TrialsIntegrationSetting__c.object
<CustomObject><fields>
        <fullName>AUIUrl__c</fullName>
        <label>AUI_Url</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>PageSizeForPaginationToShowTrials__c</fullName>
        <label>PageSizeForPaginationToShowTrials</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>PaginationPageSizeContactRelatedList__c</fullName>
        <label>PaginationPageSizeContactRelatedList</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>TrialBaseUrl__c</fullName>
        <label>TrialBaseUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>UrlForShowingTrials__c</fullName>
        <label>UrlForShowingTrials</label>
        <length>255</length>
        <type>Text</type>
    </fields><customSettingsType>Hierarchy</customSettingsType><enableFeeds>false</enableFeeds><label>Trials Integration Setting</label><visibility>Public</visibility></CustomObject>